[gd_scene load_steps=7 format=3 uid="uid://bg5jdmdkcv0mf"]

[ext_resource type="Script" path="res://scenes/help_window.gd" id="1_iol7v"]
[ext_resource type="Texture2D" uid="uid://bpeefcjw6yf2d" path="res://textures/init.png" id="2_1dtd6"]
[ext_resource type="Texture2D" uid="uid://vypb46ut3fil" path="res://icons/x_icon.svg" id="3_0hsyj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsqgi"]
bg_color = Color(0.151441, 0.171959, 0.194152, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m34u4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.152941, 0.172549, 0.196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
anti_aliasing_size = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v3hue"]

[node name="AboutWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iol7v")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(670, 270)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -135.0
offset_right = 320.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lsqgi")

[node name="DataContainer" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PortraitRect" type="TextureRect" parent="MainPanel/DataContainer"]
custom_minimum_size = Vector2(400, 270)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("2_1dtd6")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="MainPanel/DataContainer/PortraitRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m34u4")

[node name="LabelsContainer" type="VBoxContainer" parent="MainPanel/DataContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TitlePanel" type="PanelContainer" parent="MainPanel/DataContainer/LabelsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_v3hue")

[node name="TitleLabel" type="Label" parent="MainPanel/DataContainer/LabelsContainer/TitlePanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "TagIt!"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/DataContainer/LabelsContainer/TitlePanel"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("3_0hsyj")
flat = true

[node name="VersionLabel" type="Label" parent="MainPanel/DataContainer/LabelsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.298039, 0.603922, 0.603922, 1)
theme_override_font_sizes/font_size = 18
text = "version"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AuthorsLabel" type="Label" parent="MainPanel/DataContainer/LabelsContainer"]
layout_mode = 2
text = "Created by Ketei
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="MainPanel/DataContainer/LabelsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.521291, 0.562063, 0.611103, 1)
text = "A tool to help creators generate tag lists for their content."
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/DataContainer/LabelsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSeparator" type="HSeparator" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
text = "Stats"
horizontal_alignment = 1

[node name="DataContainer" type="HBoxContainer" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer/DataContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Tags Registered:"
vertical_alignment = 1

[node name="RegisteredLbl" type="Label" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer/DataContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
text_overrun_behavior = 3

[node name="TotalContainer" type="HBoxContainer" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer/TotalContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Total Tags:"
vertical_alignment = 1

[node name="TotalTagsLbl" type="Label" parent="MainPanel/DataContainer/LabelsContainer/VBoxContainer/TotalContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
text_overrun_behavior = 3
